--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">wfathallah@valuraise.com</a>
+              <a href="mailto:wfathallah@valuraise.com">wfathallah@valuraise.com</a>
             </p>
           </div>
         </div>
