--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-eur text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Cost effective</h3>
-              <p class="text-muted mb-0">We use the right technology for the right purpose at the right scale so that big data does not mean big cost for you.</p>
+              <p class="text-muted mb-0">Use the right technology for the right purpose at the right scale so that big data does not mean big cost for you.</p>
             </div>
           </div>
         </div>
