--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? <br/>
-              Send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Ready to start your next project with us?</p>
           </div>
         </div>
         <div class="row">
