add first draft logo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
 
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/ico">
+
   </head>
 
   <body id="page-top">
