add first draft logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
 
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-ico">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 
   </head>
 
