--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
 
-    <link href="favicon.ico" rel="icon" type="image/x-icon">
+    <link href="favicon.png" rel="icon" type="image/png">
 
   </head>
 
