--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Valuraise</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/valuraise.png" width="8%"/> Valuraise</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,13 +56,9 @@
     <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase">
-              <strong>VALURAISE</strong>
-            </h1>
-            <hr/>
+          <div class="col-lg-10 mx-auto" >
             <h2>
-              Get the most out of your data
+              <strong>Get the most out of your data</strong>
             </h2>
             <br/>
           </div>
