--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ mixpanel.init("e15222c0afaa8332bc6f349ab496100c");</script><!-- end Mixpanel -->
             <br/>
           </div>
           <div class="col-lg-8 mx-auto">
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" onclick="mixpanel.track('Find out more'); console.log('event')">Find Out More</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" onclick="mixpanel.track('Find out more');">Find Out More</a>
           </div>
         </div>
       </div>
