--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Solutions</a>
           </li>
 	  <li class="nav-item">
-		  <a class="nav-link" href="https://app.valuraise.com">Notifapp</a>
+		  <a class="nav-link" href="https://notifapp.valuraise.com">Notifapp</a>
 	  </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
