--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         }
       })();
       drift.SNIPPET_VERSION = "0.3.1";
-      drift.load("ie5z7zzmy3fe");
+      drift.load("snyc8euegfai");
     </script>
     <!-- End of Async Drift Code -->
   </head>
