enable widget notifapp

--- a/index.html
+++ b/index.html
@@ -289,5 +289,10 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+    <script
+      src="https://notifap-widget.firebaseapp.com/snack-iframe.js"
+      async
+    ></script>
+    <div class="notifapp-root" data-org-id="7DZRSCRAT7yOzP31H4kR"></div>
   </body>
 </html>
