--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
           (b.async = !0),
           (b.crossorigin = "anonymous"),
           (b.src = "https://docs.notifapp.valuraise.com/embed.js");
-        var a = document.getElementsByTagName("script")[0];
-        a.parentNode.insertBefore("7DZRSCRAT7yOzP31H4kR", a);
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(b, s);
       })();
     </script>
     <!-- End async Notifapp script -->
