--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://xprim.valuraise.com">Xprim</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
