--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link href="favicon.png" rel="icon" type="image/png" />
 
     <!-- Start of Async Drift Code -->
-    <script>
+    <!--script>
       "use strict";
 
       !(function() {
@@ -91,7 +91,7 @@
       })();
       drift.SNIPPET_VERSION = "0.3.1";
       drift.load("snyc8euegfai");
-    </script>
+    </script -->
     <!-- End of Async Drift Code -->
   </head>
 
@@ -124,14 +124,6 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://notifapp.valuraise.com"
-                >Notifapp</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://xprim.valuraise.com">Xprim</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
@@ -142,7 +134,7 @@
     <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
-          <div class="col-lg-10 mx-auto">
+          <div class="col-lg-10 mx-auto slogan">
             <h2><strong>Get the most out of your data</strong></h2>
             <br />
           </div>
@@ -169,22 +161,52 @@
             <p class="text-faded mb-4">
               We help you get the most out of your data
             </p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services"
-              >How ?</a
-            >
+            <p>
+              <a
+                class="typeform-share button"
+                href="https://wajdifathallah.typeform.com/to/bniEzZ"
+                data-mode="popup"
+                style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Roboto Mono, monospace;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                data-hide-headers="true"
+                data-hide-footer="true"
+                data-submit-close-delay="5"
+                target="_blank"
+                >CONTACT US
+              </a>
+              <script>
+                (function() {
+                  var qs,
+                    js,
+                    q,
+                    s,
+                    d = document,
+                    gi = d.getElementById,
+                    ce = d.createElement,
+                    gt = d.getElementsByTagName,
+                    id = "typef_orm_share",
+                    b = "https://embed.typeform.com/";
+                  if (!gi.call(d, id)) {
+                    js = ce.call(d, "script");
+                    js.id = id;
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
+                    q.parentNode.insertBefore(js, q);
+                  }
+                })();
+              </script>
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="services">
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Solutions</h2>
-            <p class="text-dark mb-4">
+            <h2 class="section-heading">
               We help our clients design and build data driven solutions
-            </p>
+            </h2>
             <hr class="my-4" />
           </div>
         </div>
@@ -224,6 +246,58 @@
         </div>
       </div>
     </section>
+    <section id="services" class="bg-dark text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">
+              We are software builders
+            </h2>
+            <hr class="light my-4" />
+            <p class="text-faded mb-4">
+              Some of our realizations
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container mb-5">
+        <div class="row ">
+          <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
+            <div class="card">
+              <img src="img/Notifapp.png" alt="Avatar" style="width:100%" />
+              <div class="container-card text-dark ">
+                <h4><b>Notifapp</b></h4>
+                <p>A managed web notification platform</p>
+                <a
+                  class="btn btn-secondary btn-lg"
+                  target="_blank"
+                  href="https://notifapp.valuraise.com"
+                  >Know more</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
+            <div class="card">
+              <img src="img/Xprim.png" alt="Avatar" style="width:100%" />
+              <div class="container-card text-dark">
+                <h4><b>Xprim</b></h4>
+                <p>A web application to supercharge your presentations</p>
+                <a
+                  class="btn btn-secondary btn-lg "
+                  target="_blank"
+                  href="https://xprim.valuraise.com"
+                  >Know more</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="contact" class="bg-dark text-white">
       <div class="container">
         <div class="row">
