--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
             <div class="card">
               <img src="img/Notifapp.png" alt="Avatar" style="width:100%" />
-              <div class="container-card text-dark ">
+              <div class="container-card text-dark text-center ">
                 <h4><b>Notifapp</b></h4>
                 <p>A managed web notification platform</p>
                 <a
@@ -282,7 +282,7 @@
           <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
             <div class="card">
               <img src="img/Xprim.png" alt="Avatar" style="width:100%" />
-              <div class="container-card text-dark">
+              <div class="container-card text-dark text-center ">
                 <h4><b>Xprim</b></h4>
                 <p>A web application to supercharge your presentations</p>
                 <a
