--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
       </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-dark text-white" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">
+            <h2 class="section-heading ">
               Our mission is to make data your best asset
             </h2>
-            <hr class="light my-4" />
-            <p class="text-faded mb-4">
+            <hr class=" my-4" />
+            <p class=" mb-4">
               We help you get the most out of your data
             </p>
             <p>
@@ -246,15 +246,15 @@
         </div>
       </div>
     </section>
-    <section id="services" class="bg-dark text-white">
+    <section id="services" class="grey-bkc">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">
               We are software builders
             </h2>
-            <hr class="light my-4" />
-            <p class="text-faded mb-4">
+            <hr class=" my-4" />
+            <p class=" mb-4">
               Some of our realizations
             </p>
           </div>
@@ -265,7 +265,7 @@
           <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
             <div class="card">
               <img src="img/Notifapp.png" alt="Avatar" style="width:100%" />
-              <div class="container-card text-dark text-center ">
+              <div class="container-card text-faded text-center ">
                 <h4><b>Notifapp</b></h4>
                 <p>A managed web notification platform</p>
                 <a
@@ -282,7 +282,7 @@
           <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
             <div class="card">
               <img src="img/Xprim.png" alt="Avatar" style="width:100%" />
-              <div class="container-card text-dark text-center ">
+              <div class="container-card text-faded text-center ">
                 <h4><b>Xprim</b></h4>
                 <p>A web application to supercharge your presentations</p>
                 <a
@@ -297,7 +297,6 @@
         </div>
       </div>
     </section>
-
     <section id="contact" class="bg-dark text-white">
       <div class="container">
         <div class="row">
