--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#rdv"
+                >For Startups</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
@@ -141,9 +146,9 @@
           <div class="col-lg-8 mx-auto">
             <a
               class="btn btn-primary btn-xl js-scroll-trigger"
-              href="#about"
+              href="#rdv"
               onclick="mixpanel.track('Find out more');"
-              >Find Out More</a
+              >Free Tech coaching</a
             >
           </div>
         </div>
@@ -296,6 +301,20 @@
           </div>
         </div>
       </div>
+    </section>
+    <section id="rdv">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <!-- Début de widget en ligne Calendly -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/wfathallah/techcoach"
+                 style="min-width:320px;height:630px;">
+            </div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+            <!-- Fin de widget en ligne Calendly -->
+            </div>
+          </div>
+        </div>
     </section>
     <section id="contact" class="bg-dark text-white">
       <div class="container">
