--- a/index.html
+++ b/index.html
@@ -306,6 +306,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
+            <h2 class="section-heading">
+              We are startup friendly
+            </h2>
+            <p class="text-muted mb-0">
+                We are happy to help you build and strengthen your tech stack, this is our way to give back to the startup community.
+              <br/>
+                <strong>What's in it for us?</strong> Helping resolve your technical challenge is a great opportunity for us to stay on top of new technologies and continue to expand our knowledge.        
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 text-center">
             <!-- Début de widget en ligne Calendly -->
             <div class="calendly-inline-widget" data-url="https://calendly.com/wfathallah/techcoach"
                  style="min-width:320px;height:630px;">
