--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <p class="text-muted mb-0">
                 We are happy to help you build and strengthen your tech stack, this is our way to give back to the startup community.
               <br/>
-                <strong>What's in it for us?</strong> Helping resolve your technical challenge is a great opportunity for us to stay on top of new technologies and continue to expand our knowledge.        
+                <strong>What's in it for us?</strong> Helping resolve your technical challenge is a great opportunity for us to stay updated with technology and continue to expand our knowledge.        
             </p>
           </div>
         </div>
