--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#rdv"
+              <a class="nav-link js-scroll-trigger" href="#coaching"
                 >For Startups</a
               >
             </li>
@@ -140,15 +140,21 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto slogan">
-            <h1><strong>Get the most out of your data</strong></h1>
+            <h2><strong>Get the most out of your data</strong></h2>
             <br />
           </div>
           <div class="col-lg-8 mx-auto">
             <a
-              class="btn btn-primary btn-xl js-scroll-trigger"
-              href="#rdv"
+              class="btn btn-secondary btn-xl js-scroll-trigger"
+              href="#company"
               onclick="mixpanel.track('Find out more');"
-              >Free Tech coaching</a
+              >Established company</a
+            >
+            <a
+              class="btn btn-primary btn-xl js-scroll-trigger"
+              href="#coaching"
+              onclick="mixpanel.track('Find out more');"
+              >Startup</a
             >
           </div>
         </div>
@@ -205,7 +211,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="company">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -302,7 +308,7 @@
         </div>
       </div>
     </section>
-    <section id="rdv">
+    <section id="coaching">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
