--- a/index.html
+++ b/index.html
@@ -144,18 +144,19 @@
             <br />
           </div>
           <div class="col-lg-8 mx-auto">
-            <a
-              class="btn btn-secondary btn-xl js-scroll-trigger"
-              href="#company"
-              onclick="mixpanel.track('Find out more');"
-              >Established company</a
-            >
-            <a
+             <a
               class="btn btn-primary btn-xl js-scroll-trigger"
               href="#coaching"
               onclick="mixpanel.track('Find out more');"
               >Startup</a
             >
+            <a
+              class="btn btn-primary btn-xl js-scroll-trigger"
+              href="#company"
+              onclick="mixpanel.track('Find out more');"
+              >Established company</a
+            >
+           
           </div>
         </div>
       </div>
