--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#coaching"
+              <a class="nav-link js-scroll-trigger" href="/startup.html"  target="_blank"
                 >For Startups</a
               >
             </li>
@@ -144,17 +144,11 @@
             <br />
           </div>
           <div class="col-lg-8 mx-auto">
-             <a
-              class="btn btn-primary btn-xl js-scroll-trigger"
-              href="#coaching"
-              onclick="mixpanel.track('Find out more');"
-              >Startup</a
-            >
             <a
               class="btn btn-primary btn-xl js-scroll-trigger"
               href="#company"
               onclick="mixpanel.track('Find out more');"
-              >Established company</a
+              >Find out more</a
             >
            
           </div>
