--- a/startup.html
+++ b/startup.html
@@ -41,15 +41,70 @@
      </head>
 
   <body id="page-top">
+   <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"
+          ><img src="img/valuraise.png" width="8%" /> Valuraise</a
+        >
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#services"
+                >Solutions</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/startup.html"  target="_blank"
+                >For Startups</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="masthead text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto slogan">
+            <h2><strong> Free tech consulting for startups</strong></h2>
+            <br />
+          </div>
+          <div class="col-lg-8 mx-auto">
+            <a
+              class="btn btn-primary btn-xl js-scroll-trigger"
+              href="#coaching"
+              >Book an appointment</a
+            >
+           
+          </div>
+        </div>
+      </div>
+    </header>
   <section id="coaching">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">
-              We are startup friendly
-            </h2>
             <p class="text-muted mb-0">
-                We are happy to help you build and strengthen your tech stack, this is our way to give back to the startup community.
+                We are happy to help startups build and strengthen thier tech stack, this is our way to give back to the startup community.
               <br/>
                 <strong>What's in it for us?</strong> Helping resolve your technical challenge is a great opportunity for us to stay updated with technology and continue to expand our knowledge.        
             </p>
