--- a/startup.html
+++ b/startup.html
@@ -44,7 +44,7 @@
    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"
+        <a class="navbar-brand js-scroll-trigger" href="/"
           ><img src="img/valuraise.png" width="8%" /> Valuraise</a
         >
         <button
@@ -61,20 +61,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services"
-                >Solutions</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/startup.html"  target="_blank"
-                >For Startups</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="/index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -94,7 +81,6 @@
               href="#coaching"
               >Book an appointment</a
             >
-           
           </div>
         </div>
       </div>
