--- a/startup.html
+++ b/startup.html
@@ -89,11 +89,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <p class="text-muted mb-0">
+             <p class=" mb-4">        
                 We are happy to help startups build and strengthen thier tech stack, this is our way to give back to the startup community.
               <br/>
                 <strong>What's in it for us?</strong> Helping resolve your technical challenge is a great opportunity for us to stay updated with technology and continue to expand our knowledge.        
-            </p>
+           </p>
           </div>
         </div>
         <div class="row">
