--- a/startup.html
+++ b/startup.html
@@ -61,7 +61,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/index.html#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -107,6 +107,62 @@
             </div>
           </div>
         </div>
+    </section>
+   <section id="contact" class="bg-dark text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <hr class="my-4" />
+            <p class="mb-5">Ready to start your next project with us?</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 mr-auto text-center">
+            <p>
+              <a
+                class="typeform-share button"
+                href="https://wajdifathallah.typeform.com/to/bniEzZ"
+                data-mode="popup"
+                style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Roboto Mono, monospace;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                data-hide-headers="true"
+                data-hide-footer="true"
+                data-submit-close-delay="5"
+                target="_blank"
+                >CONTACT US
+              </a>
+              <script>
+                (function() {
+                  var qs,
+                    js,
+                    q,
+                    s,
+                    d = document,
+                    gi = d.getElementById,
+                    ce = d.createElement,
+                    gt = d.getElementsByTagName,
+                    id = "typef_orm_share",
+                    b = "https://embed.typeform.com/";
+                  if (!gi.call(d, id)) {
+                    js = ce.call(d, "script");
+                    js.id = id;
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
+                    q.parentNode.insertBefore(js, q);
+                  }
+                })();
+              </script>
+            </p>
+          </div>
+          <div class="col-lg-12 ml-auto text-center">
+            <i class="fa fa-map-marker fa-3x mb-3 sr-contact"></i>
+            <p>
+              Valuraise, 81 rue reaumur <br />
+              75002 paris France
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 </body>
 </html>
