Update and rename startup.html to startups.html

--- a/startups.html
+++ b/startups.html
@@ -71,7 +71,7 @@
     <header class="masthead1 text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
-          <div class="col-lg-10 mx-auto slogan">
+          <div class="col-lg-10 mx-auto slogan-white">
             <h2><strong> Free tech consulting for startups</strong></h2>
             <br />
           </div>
