--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/startup.html"  target="_blank"
+              <a class="nav-link js-scroll-trigger" href="/startups.html"  target="_blank"
                 >For Startups</a
               >
             </li>
